--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
-﻿﻿﻿@using Application.Entities
+﻿﻿@using Application.Entities
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> SignInManager
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ASPNETCoreIdentityDemo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-          rel="stylesheet" />
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="~/js/javascript.js"></script>
+    <link rel="stylesheet" href="~/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </head>
-<body class="flex flex-col min-w-screen">
+<body class="flex flex-col min-w-screen w-full">
     @if (!User.IsInRole("Admin"))
     {
         <header class="bg-gray-200 shadow-md w-full">
@@ -31,7 +31,7 @@
                         <!-- Search -->
                         <div class="relative">
                             <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-60 pr-10 text-left"> <!-- Thêm pr-10 để tạo khoảng cách cho biểu tượng -->
-                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 mt-2.5">
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
@@ -58,7 +58,7 @@
                         <!-- Search -->
                         <div class="relative w-1/6 ml-0 flex-grow">
                             <input type="text" placeholder="Search" class="px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-600 w-full text-left pr-10"> <!-- Thêm pr-10 để tạo khoảng cách bên phải cho biểu tượng -->
-                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+                            <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 mt-2.5">
                                 <i class="fas fa-search"></i>
                             </span>
                         </div>
@@ -76,11 +76,20 @@
                             <span class="text-gray-500 hover:text-gray-900 font-medium w-auto truncate">Hello @User.Identity.Name</span>
                         </div>
 
-                        <!-- Logout button -->
-                        <form asp-action="Logout" asp-controller="Account" method="post">
+                        <form asp-controller="Account" asp-action="Logout" method="post" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             @Html.AntiForgeryToken()
-                            <button type="submit" class="text-gray-500 hover:text-gray-900 font-medium w-16 ">Log Out</button>
+                            <button type="submit" class="flex items-center">
+                                <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                                     aria-hidden="true"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     fill="none"
+                                     viewBox="0 0 18 16">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3"></path>
+                                </svg>
+                                <span class="flex-1 ms-3 whitespace-nowrap">Log Out</span>
+                            </button>
                         </form>
+
                     }
                     else
                     {
@@ -141,6 +150,7 @@
     }
     else
     {
+        <!-- Mobile nav toggle -->
         <button data-drawer-target="default-sidebar"
                 data-drawer-toggle="default-sidebar"
                 aria-controls="default-sidebar"
@@ -158,13 +168,14 @@
             </svg>
         </button>
 
+        <!-- Sidebar -->
         <aside id="default-sidebar"
                class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
                aria-label="Sidebar">
-            <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
+            <div class="h-full px-3 py-4 overflow-y-auto bg-white dark:bg-gray-800 border-r border-gray-200 dark:border-gray-700">
                 <ul class="space-y-2 font-medium">
                     <li>
-                        <a asp-controller="Administration" asp-action="ListUsers"
+                        <a asp-controller="Administration" asp-action="ListRoles"
                            class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             <svg class="w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                                  aria-hidden="true"
@@ -174,11 +185,11 @@
                                 <path d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z" />
                                 <path d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z" />
                             </svg>
-                            <span class="ms-3">Dashboard</span>
+                            <span class="ms-3">Role Manager</span>
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="Category" asp-action="CreateCategory"
+                        <a asp-controller="Administration" asp-action="ListUser"
                            class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                                  aria-hidden="true"
@@ -187,11 +198,12 @@
                                  viewBox="0 0 18 18">
                                 <path d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z" />
                             </svg>
-                            <span class="flex-1 ms-3 whitespace-nowrap">Category</span>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Kanban</span>
+                            <span class="inline-flex items-center justify-center px-2 ms-3 text-sm font-medium text-gray-800 bg-gray-100 rounded-full dark:bg-gray-700 dark:text-gray-300">Pro</span>
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="Administration" asp-action="ListUsers"
+                        <a asp-controller="Administration" asp-action="ListUser"
                            class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                                  aria-hidden="true"
@@ -214,7 +226,7 @@
                                  viewBox="0 0 20 18">
                                 <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z" />
                             </svg>
-                            <span class="flex-1 ms-3 whitespace-nowrap">Users</span>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Quản lý người dùng</span>
                         </a>
                     </li>
                     <li>
@@ -227,10 +239,24 @@
                                  viewBox="0 0 18 20">
                                 <path d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z" />
                             </svg>
-                            <span class="flex-1 ms-3 whitespace-nowrap">Products</span>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Quản lý sản phẩm</span>
                         </a>
                     </li>
                     <li>
+                        <a asp-controller="Category" asp-action="GetAllCategory"
+                           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                            <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                                 aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 fill="currentColor"
+                                 viewBox="0 0 18 18">
+                                <path d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z" />
+                            </svg>
+                            <span class="flex-1 ms-3 whitespace-nowrap">Quản lý danh mục</span>
+                        </a>
+                    </li>
+                    <li>
+                        <!-- Logout button -->
                         <form asp-controller="Account" asp-action="Logout" method="post" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             @Html.AntiForgeryToken()
                             <button type="submit" class="flex items-center">
@@ -244,12 +270,12 @@
                                 <span class="flex-1 ms-3 whitespace-nowrap">Log Out</span>
                             </button>
                         </form>
+
+
                     </li>
                 </ul>
             </div>
         </aside>
-
-
     }
     <div class="container">
         <main role="main" class="pb-3">
@@ -326,6 +352,11 @@
             </div>
         </footer>
     }
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+    <script src="~/js/Category.js"></script>
+    <script src="~/js/javascript.js"></script>
+    <script src="~/js/Product.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
@@ -338,5 +369,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
     <!-- jQuery Unobtrusive Validation (to bridge ASP.NET Core MVC validation with jQuery Validate) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
